Changed bullets to numbers in HTML Markdown

--- a/Quiz 1/quiz1-numpy.ipynb
+++ b/Quiz 1/quiz1-numpy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,21 +45,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Create 2 1D arrays, y_hat and y <br>\n",
-    "     • y_hat --- ŷᵢ <br>\n",
-    "     • y --- (yᵢ)"
+    "Create 2 1D arrays, y_hat and y <br>\n",
+    "y_hat --- ŷᵢ <br>\n",
+    "y --- (yᵢ)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Initialize y_hat with 20 linearly spaced numbers between -1 and 1"
+    "1. Initialize y_hat with 20 linearly spaced numbers between -1 and 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Initialize y with 20 linearly spaced numbers between 0 and 1"
+    "2. Initialize y with 20 linearly spaced numbers between 0 and 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Compute for the shape and dimension of y_hat and y."
+    "3. Compute for the shape and dimension of y_hat and y."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "(20,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "(20,)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Create individual functions for each of the loss functions with y and y_hat as parameters"
+    "4. Create individual functions for each of the loss functions with y and y_hat as parameters"
    ]
   },
   {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Each function should return the loss value (L)"
+    "5. Each function should return the loss value (L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alyssa\\AppData\\Local\\Temp\\ipykernel_20164\\2492560653.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\Alyssa\\AppData\\Local\\Temp\\ipykernel_2668\\2492560653.py:4: RuntimeWarning: divide by zero encountered in log\n",
       "  L = (sum((np.log(y_hat+1)-np.log(y+1))**2))/len(y)\n"
      ]
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alyssa\\AppData\\Local\\Temp\\ipykernel_20164\\4228708268.py:4: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\Alyssa\\AppData\\Local\\Temp\\ipykernel_2668\\4228708268.py:4: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  L = (sum(abs((y_hat-y)/y)))/len(y)\n"
      ]
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "array([5, 6, 7, 8])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
