--- a/Quiz 1/quiz1-numpy.ipynb
+++ b/Quiz 1/quiz1-numpy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -45,21 +45,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create 2 1D arrays, y_hat and y <br>\n",
-    "y_hat --- ŷᵢ <br>\n",
-    "y --- (yᵢ)"
+    "• Create 2 1D arrays, y_hat and y <br>\n",
+    "• y_hat --- ŷᵢ <br>\n",
+    "• y --- (yᵢ)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Initialize y_hat with 20 linearly spaced numbers between -1 and 1"
+    "• Initialize y_hat with 20 linearly spaced numbers between -1 and 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Initialize y with 20 linearly spaced numbers between 0 and 1"
+    "• Initialize y with 20 linearly spaced numbers between 0 and 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Compute for the shape and dimension of y_hat and y."
+    "• Compute for the shape and dimension of y_hat and y."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "(20,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "(20,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Create individual functions for each of the loss functions with y and y_hat as parameters"
+    "• Create individual functions for each of the loss functions with y and y_hat as parameters"
    ]
   },
   {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Each function should return the loss value (L)"
+    "• Each function should return the loss value (L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -434,12 +434,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a 1d array M {1, 2, …16} using the arange function"
+    "• Create a 1d array M {1, 2, …16} using the arange function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -460,12 +460,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Reshape M into 4x4 array and store it to N"
+    "• Reshape M into 4x4 array and store it to N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -490,12 +490,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Get the 2ⁿᵈ row of N"
+    "• Get the 2ⁿᵈ row of N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "array([5, 6, 7, 8])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,12 +519,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Get the minimum values for each column of N"
+    "• Get the minimum values for each column of N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -550,12 +550,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Get the locations of the minimum values for each column of N"
+    "• Get the locations of the minimum values for each column of N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -581,12 +581,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Get the average of the whole matrix"
+    "• Get the average of the whole matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -608,12 +608,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Create a vector V with 4 elements, each element is 1"
+    "• Create a vector V with 4 elements, each element is 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -634,12 +634,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Take the dot product of N and V"
+    "• Take the dot product of N and V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
